crates/keron-lang/tests/corpus/errors/parse/use_decl_empty_names.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected end of input, expected identifier
  --> 2:1
  |
2 | 
  | ^
  = help: write a name (lowercase letter or `_`, then letters / digits / `_`).
